# flightmate_backend

./: README.md  pyproject.toml  test_gemini.py  test_list_models.py
app/: cli_agent.py  groq_agent.py  main.py  prompts.py
app/agents/: book_flight_agent.py  check_flight_agent.py  main_agent.py
